--- a/template/src/index.html
+++ b/template/src/index.html
@@ -5,26 +5,19 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>vue-upgrade4</title>
-
-  <!-- build:remove -->
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <!-- /build -->
-  <!-- build:css css/main.min.css -->
+  <title>vue</title>
+  <link rel="stylesheet" href="css/bulma.css">
   <link rel="stylesheet" href="css/main.css">
-  <!-- /build -->
 </head>
 
 <body>
 
-<div id="app-main">
-  <navbar :inverted="false"></navbar>
+<main-app>
+  <navbar></navbar>
   <router-view>loading...</router-view>
-</div>
+</main-app>
 
-<!-- build:js js/main.min.js -->
 <script src="main.js"></script>
-<!-- /build -->
 
 </body>
 </html>
