path to bulma cahnged

--- a/template/src/sass/bulma.sass
+++ b/template/src/sass/bulma.sass
@@ -1,4 +1,4 @@
-@import "../node_modules/bulma/bulma.sass"
+@import "../../node_modules/bulma/bulma.sass"
 
 $black:        hsl(0, 0%, 4%)
 $black-bis:    hsl(0, 0%, 7%)
