added a few missing configuration

--- a/template/src/components/navbar/template/navbar.template.html
+++ b/template/src/components/navbar/template/navbar.template.html
@@ -1,4 +1,4 @@
-<nav class="nav">
+<nav class="nav has-shadow">
     <div class="nav-left">
         <a class="nav-item" href="#">vue-webpack-typescript</a>
     </div>
