updated the home template to utilise bulma

--- a/template/src/components/home/template/home.template.html
+++ b/template/src/components/home/template/home.template.html
@@ -1,9 +1,7 @@
-<div class="container">
-    <div class="row">
-        <div class="content col-md-4">
-            <h1><strong>Thank you for using <span class="text-primary package">\{{package}}</span></strong></h1>
-            <p>This project is running in <strong class="mode">\{{mode}} mode</strong></p>
-            <p>Make sure to follow the project on <a v-bind:href="repo">GitHub</a> to stay up to date with the latest releases, or contribute to the broject by opening an issue or making a pull-request!</p>
-        </div>
+<section class="section">
+    <div class="container">
+        <h1 class="title">Thank you for using {{package}}</h1>
+        <p>This project is running in {{mode}} mode</p>
+        <p>Make sure to follow the project on <a v-bind:href="repo">GitHub</a> to stay up to date with the latest releases, or contribute to the project by opening an issue or making a pull-request!</p>
     </div>
-</div>
+</section>
