cahnged a few things to prevent it from showing unnessesary warning

--- a/template/src/index.html
+++ b/template/src/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>vue</title>
-  <link rel="stylesheet" href="css/bulma.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
+    <title>vue</title>
+    <link rel="stylesheet" href="css/bulma.css">
+    <link rel="stylesheet" href="css/main.css">
+  </head>
 
-<body>
+  <body>
 
-<main-app>
-  <navbar></navbar>
-  <router-view>loading...</router-view>
-</main-app>
+    <div id="main-app">
+      <navbar></navbar>
+      <router-view>loading...</router-view>
+    </div>
 
-<script src="main.js"></script>
+    <script src="main.js"></script>
 
-</body>
+  </body>
 </html>
