--- a/template/src/components/home/template/home.template.html
+++ b/template/src/components/home/template/home.template.html
@@ -1,7 +1,7 @@
 <section class="section">
     <div class="container">
-        <h1 class="title">Thank you for using {{package}}</h1>
-        <p>This project is running in {{mode}} mode</p>
-        <p>Make sure to follow the project on <a v-bind:href="repo">GitHub</a> to stay up to date with the latest releases, or contribute to the project by opening an issue or making a pull-request!</p>
+        <h1 class="title">Thank you for using <b>{{package}}</b></h1>
+        <p>This project is running in <b>{{mode}}</b> mode</p>
+        <p>Make sure to follow the project on <a :href="repo">GitHub</a> to stay up to date with the latest releases, or contribute to the project by opening an issue or making a pull-request!</p>
     </div>
 </section>
