Updated Vue to 2.5, VueX to 3.0, TypeScript to 2.6 and Bulma to 0.6, Changed the doc to match accual configuration

--- a/template/src/components/navbar/template/navbar.template.html
+++ b/template/src/components/navbar/template/navbar.template.html
@@ -1,8 +1,8 @@
-<nav class="nav has-shadow">
-    <div class="nav-left">
-        <a class="nav-item" href="#">vue-webpack-typescript</a>
+<nav class="navbar has-shadow">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="#">vue-webpack-typescript</a>
     </div>
-    <div class="nav-center" v-for="link in links" >
-        <a class="nav-item" href="link.path">{{link.name}}</a>
+    <div class="navbar-center" v-for="link in links" >
+        <a class="navbar-item" href="link.path"></a>
     </div>
 </nav>
